Increased the memory used by tests, and change the GC settings