@@ -293,7 +293,8 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-report-plugin</artifactId>
               <configuration>
-                <aggregate>true</aggregate>
+                <aggregate>true</aggregate> 
+                <argLine>-Xmx1024m -XX:+UseConcMarkSweepGC</argLine>
               </configuration>
             </plugin>
 
